--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "convert-csv-to-json": "0.0.13",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "knex": "^0.14.6",
