--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.2",
     "convert-csv-to-json": "0.0.13",
     "cors": "^2.8.4",
+    "csvtojson": "^1.1.12",
     "express": "^4.16.3",
     "knex": "^0.14.6",
     "morgan": "^1.9.0",
